prusti/tests/verify/ui/non-pure-function.stderr
error: [Prusti encoding] use of impure function "get_true" in assertion
  --> $DIR/non-pure-function.rs:14:13
   |
14 | #[requires="get_true() && !foo::get_false()"]
   |             ^^^^^^^^^^

error: [Prusti encoding] use of impure function "foo::get_false" in assertion
  --> $DIR/non-pure-function.rs:14:28
   |
14 | #[requires="get_true() && !foo::get_false()"]
   |                            ^^^^^^^^^^^^^^^^

error: [Prusti] use of impure function might be reachable.
  --> $DIR/non-pure-function.rs:14:13
   |
14 | #[requires="get_true() && !foo::get_false()"]
   |             ^^^^^^^^^^
   |
   = help: Functions called from assertions should be marked as pure.

error: aborting due to 3 previous errors

